5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4123/executions/1758_1576.log
== TEST (2019-05-23 10:27:54) 
-- CODE:
m = ones(int(input()), dtype=int)
n = ones(int(input()), dtype=int)
i = j = k = 0
while i<len(m):
	j+=1 if m[i] == 33 and n[i] == 22 or m[i] == 22 and n[i] == 11 or m[i] == 11 and n[i] == 33 else j
	k+=1 if n[i] == 33 and m[i] == 22 or n[i] == 22 and m[i] == 11 or n[i] == 11 and m[i] == 33 else k
	i+=1
print(len(n))
if j>k:
	print["EUSAPIA"]
elif k>j:
	print("BARSANULFO")
else:
	print("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    m = ones(int(input()), dtype=int)
NameError: name 'ones' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 10:28:21) 
-- CODE:
m = array(eval(input()))
n = array(eval(input()))
i = j = k = 0
while i<len(m):
	j+=1 if m[i] == 33 and n[i] == 22 or m[i] == 22 and n[i] == 11 or m[i] == 11 and n[i] == 33 else j
	k+=1 if n[i] == 33 and m[i] == 22 or n[i] == 22 and m[i] == 11 or n[i] == 11 and m[i] == 33 else k
	i+=1
print(len(n))
if j>k:
	print["EUSAPIA"]
elif k>j:
	print("BARSANULFO")
else:
	print("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    m = array(eval(input()))
NameError: name 'array' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 10:28:37) 
-- CODE:
from numpy import*
m = array(eval(input()))
n = array(eval(input()))
i = j = k = 0
while i<len(m):
	j+=1 if m[i] == 33 and n[i] == 22 or m[i] == 22 and n[i] == 11 or m[i] == 11 and n[i] == 33 else j
	k+=1 if n[i] == 33 and m[i] == 22 or n[i] == 22 and m[i] == 11 or n[i] == 11 and m[i] == 33 else k
	i+=1
print(len(n))
if j>k:
	print["EUSAPIA"]
elif k>j:
	print("BARSANULFO")
else:
	print("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 10:29:50) 
-- CODE:
from numpy import*
m = array(eval(input()))
n = array(eval(input()))
i = j = k = 0
while i<len(m):
	j+=1 if (m[i] == 33 and n[i] == 22) or (m[i] == 22 and n[i] == 11) or (m[i] == 11 and n[i] == 33) else j
	k+=1 if (n[i] == 33 and m[i] == 22) or (n[i] == 22 and m[i] == 11) or (n[i] == 11 and m[i] == 33) else k
	i+=1
print(len(n))
if j>k:
	print["EUSAPIA"]
elif k>j:
	print("BARSANULFO")
else:
	print("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 10:32:44) 
-- CODE:
from numpy import*
m = array(eval(input()))
n = array(eval(input()))
i = j = k = 0
while i<len(m):
	j+=1 if (m[i] == '33' and n[i] == '22') or (m[i] == '22' and n[i] == '11') or (m[i] == '11' and n[i] == '33') else j
	k+=1 if (n[i] == '33' and m[i] == '22') or (n[i] == '22' and m[i] == '11') or (n[i] == '11' and m[i] == '33') else k
	i+=1
print(len(n))
if j>k:
	print["EUSAPIA"]
elif k>j:
	print("BARSANULFO")
else:
	print("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 10:32:58) 
-- CODE:
from numpy import*
m = array(eval(input()))
n = array(eval(input()))
i = j = k = 0
while i<len(m):
	j+=1 if (m[i] == '33' and n[i] == '22') or (m[i] == '22' and n[i] == '11') or (m[i] == '11' and n[i] == '33') else j
	k+=1 if (n[i] == '33' and m[i] == '22') or (n[i] == '22' and m[i] == '11') or (n[i] == '11' and m[i] == '33') else k
	i+=1
print(len(n))
if j>k:
	print["EUSAPIA"]
elif k>j:
	print("BARSANULFO")
else:
	print("EMPATE")
-- EXECUTION TIME:
0.460663
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:
12
EMPATE
-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
10
EMPATE
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
18
EMPATE
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 10:33:38) 
-- CODE:
from numpy import*
m = array(eval(input()))
n = array(eval(input()))
i = j = k = 0
while i<len(m):
	j+=1 if (m[i] == 33 and n[i] == 22) or (m[i] == 22 and n[i] == 11) or (m[i] == 11 and n[i] == 33) else j
	k+=1 if (n[i] == 33 and m[i] == 22) or (n[i] == 22 and m[i] == 11) or (n[i] == 11 and m[i] == 33) else k
	i+=1
print(len(n))
if j>k:
	print["EUSAPIA"]
elif k>j:
	print("BARSANULFO")
else:
	print("EMPATE")
-- EXECUTION TIME:
0.378698
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:
12
BARSANULFO
-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
10
BARSANULFO
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
18
BARSANULFO
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 10:34:08) 
-- CODE:
from numpy import*
m = array(eval(input()))
n = array(eval(input()))
i = j = k = 0
while i<len(m):
	j+=1 if (m[i] == 33 and n[i] == 22) or (m[i] == 22 and n[i] == 11) or (m[i] == 11 and n[i] == 33) else j
	k+=1 if (n[i] == 33 and m[i] == 22) or (n[i] == 22 and m[i] == 11) or (n[i] == 11 and m[i] == 33) else k
	i+=1
print(len(n))
print(j,k)
if j>k:
	print["EUSAPIA"]
elif k>j:
	print("BARSANULFO")
else:
	print("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 10:35:44) 
-- CODE:
from numpy import*
m = array(eval(input()))
n = array(eval(input()))
i = j = k = 0
while i<len(m):
	j+=1 if (m[i] == "33" and n[i] == "22") or (m[i] == 22 and n[i] == 11) or (m[i] == 11 and n[i] == 33) else j
	k+=1 if (n[i] == "33" and m[i] == "22") or (n[i] == 22 and m[i] == 11) or (n[i] == 11 and m[i] == 33) else k
	i+=1
print(len(n))
print(j,k)
if j>k:
	print["EUSAPIA"]
elif k>j:
	print("BARSANULFO")
else:
	print("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 10:36:39) 
-- CODE:
from numpy import*
m = array(eval(input()))
n = array(eval(input()))
i = j = k = 0
while i<len(m):
	j+=1 if (m[i] == 33 and n[i] == 22) or (m[i] == 22 and n[i] == 11) or (m[i] == 11 and n[i] == 33) else j
	k+=1 if (n[i] == 33 and m[i] == 22) or (n[i] == 22 and m[i] == 11) or (n[i] == 11 and m[i] == 33) else k
	i+=1
print(len(n))
print(j,k)
if j>k:
	print["EUSAPIA"]
elif k>j:
	print("BARSANULFO")
else:
	print("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 10:37:25) 
-- CODE:
from numpy import*
m = array(eval(input()))
n = array(eval(input()))
i = j = k = 0
while i<len(m):
	j+=1 if (m[i] == 33 and n[i] == 22) or (m[i] == 22 and n[i] == 11) or (m[i] == 11 and n[i] == 33) else j
	k+=1 if (n[i] == 33 and m[i] == 22) or (n[i] == 22 and m[i] == 11) or (n[i] == 11 and m[i] == 33) else k
	i+=1
	print(j,k)
print(len(n))
if j>k:
	print["EUSAPIA"]
elif k>j:
	print("BARSANULFO")
else:
	print("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 10:39:34) 
-- CODE:
from numpy import*
m = array(eval(input()))
n = array(eval(input()))
i = j = k = 0
while i<len(m):
	j+=1 if (m[i] == 33 and n[i] == 22) or (m[i] == 22 and n[i] == 11) or (m[i] == 11 and n[i] == 33) else j
	k+=1 if (n[i] == 33 and m[i] == 22) or (n[i] == 22 and m[i] == 11) or (n[i] == 11 and m[i] == 33) else k
	i+=1
	print(j,k)
print(len(n))
if j>k:
	print("EUSAPIA")
elif k>j:
	print("BARSANULFO")
else:
	print("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 10:41:08) 
-- CODE:
from numpy import*
m = array(eval(input()))
n = array(eval(input()))
i = j = k = 0
while i<len(m):
	j+=1 if (m[i] == 33 and n[i] == 22) or (m[i] == 22 and n[i] == 11) or (m[i] == 11 and n[i] == 33) else j
	k+=1 if (m[i] == 33 and n[i] == 22) or (m[i] == 22 and n[i] == 11) or (m[i] == 11 and n[i] == 33) else k
	i+=1
	print(j,k)
print(len(n))
if j>k:
	print("EUSAPIA")
elif k>j:
	print("BARSANULFO")
else:
	print("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 10:41:22) 
-- CODE:
from numpy import*
m = array(eval(input()))
n = array(eval(input()))
i = j = k = 0
while i<len(m):
	j+=1 if (m[i] == 33 and n[i] == 22) or (m[i] == 22 and n[i] == 11) or (m[i] == 11 and n[i] == 33) else j
	k+=1 if (m[i] == 33 and n[i] == 22) or (m[i] == 22 and n[i] == 11) or (m[i] == 11 and n[i] == 33) else k
	i+=1
	print(j,k)
print(len(n))
if j>k:
	print("EUSAPIA")
elif k>j:
	print("BARSANULFO")
else:
	print("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 10:41:47) 
-- CODE:
from numpy import*
m = array(eval(input()))
n = array(eval(input()))
i = j = k = 0
while i<len(m):
	j+=1 if (m[i] == 33 and n[i] == 22) or (m[i] == 22 and n[i] == 11) or (m[i] == 11 and n[i] == 33) else j
	k+=1 if (n[i] == 33 and m[i] == 22) or (n[i] == 22 and m[i] == 11) or (n[i] == 11 and m[i] == 33) else k
	i+=1
	print(j,k)
print(len(n))
if j>k:
	print("EUSAPIA")
elif k>j:
	print("BARSANULFO")
else:
	print("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 10:41:57) 
-- CODE:
from numpy import*
m = array(eval(input()))
n = array(eval(input()))
i = j = k = 0
while i<len(m):
	j+=1 if (m[i] == 33 and n[i] == 22) or (m[i] == 22 and n[i] == 11) or (m[i] == 11 and n[i] == 33) else j
	k+=1 if (n[i] == 33 and m[i] == 22) or (n[i] == 22 and m[i] == 11) or (n[i] == 11 and m[i] == 33) else k
	i+=1
	print(j,k)
print(len(n))
if j>k:
	print("EUSAPIA")
elif k>j:
	print("BARSANULFO")
else:
	print("EMPATE")
-- EXECUTION TIME:
0.529349
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:
1 0
2 1
3 2
4 4
8 8
9 16
10 32
11 64
22 128
44 129
88 130
176 260
12
BARSANULFO
-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
0 1
0 2
1 4
2 8
4 9
8 10
16 11
17 22
18 44
19 88
10
BARSANULFO
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
0 1
0 2
0 3
0 4
0 8
1 16
2 32
4 64
8 65
16 66
32 132
33 264
34 528
68 1056
136 1057
272 1058
544 2116
545 4232
18
BARSANULFO
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 10:42:42) 
-- CODE:
from numpy import*
m = array(eval(input()))
n = array(eval(input()))
i = j = k = 0
while i<len(m):
	if (m[i] == 33 and n[i] == 22) or (m[i] == 22 and n[i] == 11) or (m[i] == 11 and n[i] == 33):
		j+=1
	if (n[i] == 33 and m[i] == 22) or (n[i] == 22 and m[i] == 11) or (n[i] == 11 and m[i] == 33):
		k+=1
	i+=1
	print(j,k)
print(len(n))
if j>k:
	print("EUSAPIA")
elif k>j:
	print("BARSANULFO")
else:
	print("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 10:42:49) 
-- CODE:
from numpy import*
m = array(eval(input()))
n = array(eval(input()))
i = j = k = 0
while i<len(m):
	if (m[i] == 33 and n[i] == 22) or (m[i] == 22 and n[i] == 11) or (m[i] == 11 and n[i] == 33):
		j+=1
	if (n[i] == 33 and m[i] == 22) or (n[i] == 22 and m[i] == 11) or (n[i] == 11 and m[i] == 33):
		k+=1
	i+=1
	print(j,k)
print(len(n))
if j>k:
	print("EUSAPIA")
elif k>j:
	print("BARSANULFO")
else:
	print("EMPATE")
-- EXECUTION TIME:
0.49789
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:
1 0
1 1
2 1
3 1
3 1
4 1
5 1
6 1
6 1
6 2
6 3
6 3
12
EUSAPIA
-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
0 1
0 2
1 2
2 2
2 3
2 4
2 5
3 5
4 5
5 5
10
EMPATE
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
0 1
0 1
0 2
0 3
0 3
1 3
2 3
2 3
2 4
2 5
2 5
3 5
4 5
4 5
4 6
4 7
4 7
5 7
18
BARSANULFO
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 10:42:54) 
-- CODE:
from numpy import*
m = array(eval(input()))
n = array(eval(input()))
i = j = k = 0
while i<len(m):
	if (m[i] == 33 and n[i] == 22) or (m[i] == 22 and n[i] == 11) or (m[i] == 11 and n[i] == 33):
		j+=1
	if (n[i] == 33 and m[i] == 22) or (n[i] == 22 and m[i] == 11) or (n[i] == 11 and m[i] == 33):
		k+=1
	i+=1
	print(j,k)
print(len(n))
if j>k:
	print("EUSAPIA")
elif k>j:
	print("BARSANULFO")
else:
	print("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 10:43:15) 
-- CODE:
from numpy import*
m = array(eval(input()))
n = array(eval(input()))
i = j = k = 0
while i<len(m):
	if (m[i] == 33 and n[i] == 22) or (m[i] == 22 and n[i] == 11) or (m[i] == 11 and n[i] == 33):
		j+=1
	if (n[i] == 33 and m[i] == 22) or (n[i] == 22 and m[i] == 11) or (n[i] == 11 and m[i] == 33):
		k+=1
	i+=1

print(len(n))
if j>k:
	print("EUSAPIA")
elif k>j:
	print("BARSANULFO")
else:
	print("EMPATE")
-- EXECUTION TIME:
0.444409
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:
12
EUSAPIA
-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
10
EMPATE
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
18
BARSANULFO
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
